# mail2blog

./: .gitignore  LICENSE  README.md  m2b.conf  reduce-gpx.py  requirements.txt  setup.cfg  tox.ini
mail2blog/: __init__.py  config.py  controller.py  database.py  imapconnector.py  logsetup.py  m2b.py  parse_args.py  test_render.py  tools.py  view.py
templates/: article.j2  index.j2  index_new.j2
themes/: body_after_include.html  body_before_include.html  header_include.html  header_include_no_map.html  style_internal_css.html
