[metadata]
name = mail2blog
summary = turn mails into blog entries
description_file = README.md
description_content_type = text/markdown; charset=UTF-8

author = Marcus Hardt
author_email = hardt@kit.edu

home_page = https://github.com/marcvs/mail2blog
project_urls =
    Bug Tracker = https://github.com/marcvs/mail2blog
    Documentation = https://github.com/marcvs/mail2blog

license = MIT 
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration
    Topic :: Utilities

# This creates a binary <bin-name> 
# that calls the function in <dir>/<module>:<function>
[options.entry_points]
console_scripts =
     mail2blog=mail2blog.view:generate_index

[bdist_wheel]
universal = 1

[files]
packages =
    mail2blog
